# no-panic

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: bin.rs  lib.rs
noexcept/: Cargo.toml
noexcept-impl/: Cargo.toml
noexcept-impl/src/: lib.rs
noexcept/src/: lib.rs
src/: lib.rs
tests/: test.rs
tests/compiletest/: mod.rs
tests/ui/: async-fn.rs  async-fn.stderr  const-fn.rs  const-fn.stderr  trait-fn.rs  trait-fn.stderr
