[package]
name = "no-panic"
version = "0.1.17"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Attribute macro to require that the compiler prove a function can't ever panic."
documentation = "https://docs.rs/no-panic"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/no-panic"
rust-version = "1.31"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
rustversion = "1.0.9"
tempfile = "3.0"
trybuild = { version = "1.0.69", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
