[package]
name = "noexcept-impl"
version = "0.0.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Implementation detail of the `noexcept` crate"
edition = "2021"
exclude = ["build.rs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/no-panic"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
