[package]
name = "noexcept"
version = "0.0.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["no-std", "no-std::no-alloc"]
description = "Attribute macro equivalent to C++'s noexcept specifier"
documentation = "https://docs.rs/noexcept"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/no-panic"

[dependencies]
noexcept-impl = { version = "0.0.1", path = "../noexcept-impl" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
